--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@mui/material": "^5.16.6",
     "@mui/x-date-pickers": "^7.12.0",
     "@mui/x-date-pickers-pro": "^7.27.0",
-    "@vitejs/plugin-react": "^1.3.2",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.1",
@@ -54,6 +53,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.38",
@@ -61,6 +61,8 @@
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
-    "vite": "^2.6.14"
+    "vite": "^5.4.21",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zmp-vite-plugin": "^1.1.6"
   }
 }
