--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:css": "postcss src/css/tailwind.css -o src/css/styles.css"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@firebase/auth": "^1.7.5",
@@ -30,6 +31,7 @@
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "moment": "^2.30.1",
     "path-to-regexp": "^7.0.0",
