--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^3.4.0",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
